--- a/vijay.html
+++ b/vijay.html
@@ -2,3 +2,5 @@
   <h1>vijay</h1>
 </center>
 <hr>
+
+<p>Words have a way of hitting us right when we need them most. Whether it's a dose of self-love, a push to chase success, or a reminder to laugh at life's quirks, the right quote can turn your day around. This handpicked collection is here to inspire, motivate, and maybe even make you chuckle. So dive in because sometimes, all it takes is a few words to spark something amazing.</p>
